app/src/main/java/com/example/todolist/domain/errors/Result.kt
package com.example.todolist.domain.errors

sealed interface Result<out D, out E : ErrorDefault> {
    data class Success<out D, out E : ErrorDefault>(val data: D) : Result<D, E>
    data class Error<out D, out E : ErrorDefault>(val error: E) : Result<D, E>
}